<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluetoothCV</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Switch</string>
    <string name="on">Turn ON</string>
    <string name="off">Turn OFF</string>
    <string name="send">SEND</string>
    <string name="Text">Status:</string>
    <string name="find">Find</string>

</resources>
