<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bluetoothcv.MainActivity" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ViewSwitcher
        android:id="@+id/viewSwitcher1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/turnOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="on"
                    android:text="@string/on" />

                <Button
                    android:id="@+id/turnOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="off"
                    android:text="@string/off" />
            </LinearLayout>

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="find"
                android:text="@string/find" />

            <EditText
                android:id="@+id/editTextSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="enter code here" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send" />

            <ListView
                android:id="@+id/listView1"
                android:layout_width="fill_parent"
                android:layout_height="200dp" >
            </ListView>
        </LinearLayout>

        <org.opencv.android.JavaCameraView
            android:id="@+id/camView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

    </ViewSwitcher>


</RelativeLayout>